# distributed-discord-clone

./: .gitignore  CHANGELOG.md  CLAUDE.md  RESUME.md  TODO.md
backend/: .env.example
backend/bins/cli/: Cargo.toml
backend/bins/cli/src/: gateway_client.rs  main.rs  rest.rs  scenario.rs  webauthn.rs
backend/bins/server/: Cargo.toml
backend/bins/server/src/: main.rs
backend/config/: cluster.example.toml
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs
backend/crates/auth/src/error/: mod.rs
backend/crates/auth/src/password/: mod.rs
backend/crates/auth/src/pow/: mod.rs
backend/crates/auth/src/refresh/: mod.rs
backend/crates/auth/src/token/: mod.rs
backend/crates/auth/src/totp/: mod.rs
backend/crates/auth/src/webauthn/: mod.rs
backend/crates/gateway/: Cargo.toml
backend/crates/gateway/src/: lib.rs
backend/crates/gateway/src/dispatch/: mod.rs
backend/crates/gateway/src/hub/: mod.rs
backend/crates/gateway/src/presence/: mod.rs
backend/crates/gateway/src/protocol/: mod.rs
backend/crates/gateway/src/routes/: mod.rs
backend/crates/gateway/src/session/: mod.rs
backend/crates/gateway/src/state/: mod.rs
backend/crates/gateway/src/user_route/: mod.rs
backend/crates/node/: Cargo.toml
backend/crates/node/src/: lib.rs
backend/crates/node/src/clock/: mod.rs
backend/crates/node/src/membership/: mod.rs
backend/crates/node/src/presence/: mod.rs
backend/crates/node/src/realm/: mod.rs
backend/crates/node/src/ring/: mod.rs
backend/crates/node/src/router/: mod.rs
backend/crates/node/src/swim/: mod.rs
backend/crates/node/tests/: dst.rs  swim_dst.rs
backend/crates/rest-api/: Cargo.toml
backend/crates/rest-api/src/: lib.rs
backend/crates/rest-api/src/error/: mod.rs
backend/crates/rest-api/src/events/: mod.rs
backend/crates/rest-api/src/extract/: mod.rs
backend/crates/rest-api/src/perm/: mod.rs
backend/crates/rest-api/src/ratelimit/: mod.rs
backend/crates/rest-api/src/routes/: attachment.rs  audit.rs  auth.rs  channel.rs  dm.rs  guild.rs  invite.rs  member.rs  message.rs  mod.rs  read_state.rs  realm.rs  relationship.rs  role.rs  sync.rs  thread.rs  webauthn.rs  webhook.rs
backend/crates/rest-api/src/state/: mod.rs
backend/crates/rest-api/tests/: api.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/migrations/: 0001_init.sql  0002_refresh_tokens.sql  0003_members.sql  0004_invites.sql  0005_roles.sql  0006_channel_overwrites.sql  0007_reactions.sql  0008_message_mentions.sql  0009_dm_pairs.sql  0010_relationships.sql  0011_read_states.sql  0012_message_fts.sql  0013_thread_meta.sql  0014_attachments.sql  0015_webhooks.sql  0016_audit_log.sql  0017_messages_partition.sql  0018_webauthn_credentials.sql  0019_message_partition_maintenance.sql  0020_realm_events.sql  0021_user_crdt_entries.sql
backend/crates/storage/src/: lib.rs
backend/crates/storage/src/attachment/: mod.rs
backend/crates/storage/src/audit/: mod.rs
backend/crates/storage/src/blob/: mod.rs
backend/crates/storage/src/channel/: mod.rs
backend/crates/storage/src/crdt/: mod.rs
backend/crates/storage/src/dm/: mod.rs
backend/crates/storage/src/event/: mod.rs
backend/crates/storage/src/guild/: mod.rs
backend/crates/storage/src/invite/: mod.rs
backend/crates/storage/src/message/: mod.rs
backend/crates/storage/src/overwrite/: mod.rs
backend/crates/storage/src/partition/: mod.rs
backend/crates/storage/src/pool/: mod.rs
backend/crates/storage/src/reaction/: mod.rs
backend/crates/storage/src/read_state/: mod.rs
backend/crates/storage/src/refresh_token/: mod.rs
backend/crates/storage/src/relationship/: mod.rs
backend/crates/storage/src/role/: mod.rs
backend/crates/storage/src/store/: mod.rs
backend/crates/storage/src/thread/: mod.rs
backend/crates/storage/src/user/: mod.rs
backend/crates/storage/src/webauthn/: mod.rs
backend/crates/storage/src/webhook/: mod.rs
backend/crates/transport/: Cargo.toml
backend/crates/transport/src/: lib.rs
backend/crates/transport/src/iface/: mod.rs
backend/crates/transport/src/sim/: mod.rs
backend/crates/transport/src/stub/: mod.rs
backend/crates/transport/src/tcp/: mod.rs
backend/crates/transport/src/tls/: mod.rs
backend/crates/transport/src/wire/: mod.rs
docs/: README.md  design-discussion.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+92 files in other folders)
