[package]
name = "cli"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
domain = { path = "../../crates/domain" }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.29.0"
