[package]
name = "storage"
version = "1.3.0"     # 독립 버전 관리 (CLAUDE.md R3/R7)
edition = "2024"
license = "MIT"

[dependencies]
domain = { path = "../domain" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros"] }
